# color-hash-python

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  colorhash.py  makefile  publish.py  pyproject.toml
colorhash/: __init__.py  colorhash.py
docs/: gen.py
test/: constants.py  test_colorhash.py  test_metadata.py
