[tool.poetry]
name = "colorhash"
version = "1.2.1"
description = "Generate color based on any object"
authors = ["dimostenis <dimosh3k@gmail.com>", "Felix Krull <f_krull@gmx.de>"]
license = "MIT"
include = ["README.md"]

readme = "README.md"
homepage = "https://github.com/dimostenis/color-hash-python"
repository = "https://pypi.org/project/colorhash/"

keywords = ["color", "hash", "rgb", "hsl", "hex"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dimostenis/color-hash-python/issues"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pytest = "^6"
tox = "^3"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.black]
line-length = 88

[tool.tox]
legacy_tox_ini = """\
[tox]
isolated_build = True
envlist = python3.6,python3.7,python3.8,python3.9,python3.10,pypy3.9

[testenv]
deps = pytest
commands = pytest
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
