[project]
requires-python = ">=3.6"
name = "colorhash"
description = "Generate color based on any object"
license = { text = "MIT" }
version = "1.3.2"
readme = "README.md"
authors = [
  { name = "dimostenis", email = "dimosh3k@gmail.com" },
  { name = "Felix Krull", email = "f_krull@gmx.de" },
]
keywords = ["color", "hash", "rgb", "hsl", "hex"]
dependencies = []
[project.urls]
Homepage = "https://github.com/dimostenis/color-hash-python"
"Bug Tracker" = "https://github.com/dimostenis/color-hash-python/issues"
[project.optional-dependencies]
dev = ["black", "pre-commit", "pytest"]

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.black]
line-length = 88

[tool.mypy]
enable_error_code = ["truthy-bool"]

[tool.refurb]
# FURB145 Replace `x[:]` with `x.copy()`
ignore = ["FURB145"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/test", ".gitignore", ".pre-commit-config.yaml", "makefile"]

[tool.hatch.envs.test]
dependencies = ["pytest"]
[tool.hatch.envs.test.scripts]
test = "pytest"
[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
